[feature] add get user by id endpoint
